<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Reference Point Navigation</string>
    <string name="modelsDirectory">/sdcard/Navatar/models/</string>
    <string name="buildingSpinnerLabel">Select a building:</string>
    <string name="userNameEditTextLabel">Type user name:</string>
    <string name="selectBuildingButtonLabel">Confirm Selected Building</string>
    <string name="startRoomEditTextLabel">Type start room:</string>
    <string name="endRoomEditTextLabel">Type end room:</string>
    <string name="startNavigationButtonLabel">Start Navigation</string>
    <string name="startTrainingButtonLabel">Start Training</string>
    <string name="typeSpinerLabel">Navigation Type:</string>
    <string name="modeSpinerLabel">Navigation Mode:</string>
    <string name="maxDistanceSpinerLabel">Maximum Distance:</string>
    <string name="fromSpinnerLabel">From Room:</string>
    <string name="toSpinnerLabel">To Room:</string>
    <string name="startNavigation">Start Navigation</string>
    <string name="showNavigation">List Steps</string>
    <string name="map_service_name">Map Service</string>
    <string name="sensing_service_name">Sensing Service</string>
    <string name="pf_service_name">PF Service</string>
    <string name="mapSpinnerLabel">Select a Map:</string>
    <string name="selectMapLabel">Select a Map</string>
    <string name="mapSelectionDescription">Select a Map to start navigating</string>
    <string name="navigationHistory">Navigation History</string>
    <string name="welcomeToNavatar">Welcome to Reference Point Navigation</string>
    <string name="cancelled">Cancelled</string>
    <string name="navServiceName">Navigation Service</string>
    <string name="permission_rationale">Location permission is required for auto-locating.</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="permission_denied_explanation">Permission was denied, but location permission is required for auto-locating</string>
    <string name="settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="locationHeader">Your Current Location</string>
    <string name="softDeny">Click here to enable location permissions.</string>
    <string name="hardDeny">You have previously denied location permissions. Click here to go to settings and enable them.</string>
    <string name="error_accessing_location">There was an error retrieving your location.</string>
    <string name="error_generic">An unexpected error has occurred.</string>
    <string name="navHistoryButton">Navigation History</string>
    <string name="reverseRoute">Reverse Route</string>
    <string name="direction">Direction</string>
    <string name="noRouteFound">No Route Found</string>
</resources>